--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,9 +1,9 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Levels/Level_MasterLevel.Level_MasterLevel
+GameDefaultMap=/Game/Levels/Level_NewLevel.Level_NewLevel
 GlobalDefaultGameMode=/Game/BP_GameMode.BP_GameMode_C
-EditorStartupMap=/Game/Levels/Level_MasterLevel.Level_MasterLevel
+EditorStartupMap=/Game/Levels/Level_NewLevel.Level_NewLevel
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
