--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -4,6 +4,7 @@
 GameDefaultMap=/Game/Levels/Level_NewLevel.Level_NewLevel
 GlobalDefaultGameMode=/Game/BP_GameMode.BP_GameMode_C
 EditorStartupMap=/Game/Levels/Level_NewLevel.Level_NewLevel
+GameInstanceClass=/Game/Blueprints/BP_GameInstance.BP_GameInstance_C
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
