--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Levels/Level_NewLevel.Level_NewLevel
+GameDefaultMap=/Game/Levels/LevelMainMenu.LevelMainMenu
 GlobalDefaultGameMode=/Game/BP_GameMode.BP_GameMode_C
 EditorStartupMap=/Game/Levels/Level_NewLevel.Level_NewLevel
 GameInstanceClass=/Game/Blueprints/BP_GameInstance.BP_GameInstance_C
