project settings updated to properly build

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -8,7 +8,7 @@ Build=IfProjectHasCode
 BuildConfiguration=PPBC_Development
 BuildTarget=
 LaunchOnTarget=
-StagingDirectory=(Path="")
+StagingDirectory=(Path="C:/Projects/_Builds")
 FullRebuild=False
 ForDistribution=False
 IncludeDebugFiles=False
@@ -93,13 +93,15 @@ bSkipMovies=False
 -IniSectionDenylist=StorageServers
 +IniSectionDenylist=HordeStorageServers
 +IniSectionDenylist=StorageServers
-+MapsToCook=(FilePath="/Game/Levels/Level_Boss_First")
++MapsToCook=(FilePath="/Game/Levels/LevelMainMenu")
++MapsToCook=(FilePath="/Game/Levels/Level_OpeningCutscene")
++MapsToCook=(FilePath="/Game/Levels/Level_NewLevel")
 +DirectoriesToAlwaysCook=(Path="/Interchange/Functions")
 +DirectoriesToAlwaysCook=(Path="/Interchange/gltf")
 +DirectoriesToAlwaysCook=(Path="/Interchange/Materials")
 +DirectoriesToAlwaysCook=(Path="/Interchange/Pipelines")
 +DirectoriesToAlwaysCook=(Path="/Interchange/Utilities")
-PerPlatformBuildConfig=()
-PerPlatformTargetFlavorName=()
+PerPlatformBuildConfig=(("Windows", PPBC_Shipping))
+PerPlatformTargetFlavorName=(("Android", "Android_ASTC"))
 PerPlatformBuildTarget=()
 
