Volume and main menu button

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -75,3 +75,6 @@ ManualIPAddress=
 [CoreRedirects]
 +PropertyRedirects=(OldName="/Script/GP4.HealthComponent.ImmunityCountDown",NewName="/Script/GP4.HealthComponent.ImmunityTimer")
 
+[/Script/Engine.AudioSettings]
+DefaultBaseSoundMix=/Game/Sounds/Mix.Mix
+
